# Quant-BackTester

./: .gitignore  README.md  main.py  pyproject.toml  smoketest.py
notebooks/: 00_smoke_test.py  01_data_exploration.ipynb  costs.ipynb  metrics.ipynb  strategies.ipynb
notebooks/data/raw/: RELIANCE_NS.parquet
reports/: week3_strategy_comparison.csv  week4_cost_comparison.csv
src/backtester/data/: loader.py  universes.py
src/backtester/engine/: costs.py
src/backtester/metrics/: metrics.py
src/backtester/strategies/: strategies.py
tests/: test_costs.py  test_loader.py  test_strategies.py
